--- a/package.json
+++ b/package.json
@@ -33,13 +33,13 @@
   "author": "Bluebird - https://github.com/Bluebird2000",
   "license": "MIT",
   "dependencies": {
+    "@typescript-eslint/typescript-estree": "^8.33.1",
     "acorn": "^8.0.0",
     "acorn-walk": "^8.3.4",
     "chalk": "^5.3.0",
     "cli-table3": "^0.6.5",
     "dictionary-en": "^4.0.0",
     "fast-glob": "^3.2.12",
-    "leven": "^3.1.0",
     "nspell": "^2.1.5"
   },
   "devDependencies": {
