check if the suggestions plus the original word (all lowercased) are all valid spellings recognized by the dictionary

--- a/package.json
+++ b/package.json
@@ -20,7 +20,12 @@
     "typo-checker": "node dist/index.js"
   },
   "typoChecker": {
-    "whitelist": ["quickteller", "gmail", "biller", "Quicktag", "Billers"]
+    "whitelist": [
+      "exampleVariable",
+      "anotherExample",
+      "myFunction",
+      "someConstant"
+    ]
   },
   "repository": {
     "type": "git",
