--- a/package.json
+++ b/package.json
@@ -29,8 +29,9 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Bluebird2000/@bluebird-helpers.git"
+    "url": "git+https://github.com/Bluebird2000/typo-checker.git"
   },
+  "homepage": "https://github.com/Bluebird2000/typo-checker#readme",
   "keywords": [
     "typo",
     "checker",
@@ -38,7 +39,7 @@
     "lint",
     "variable"
   ],
-  "author": "Bluebird - https://github.com/Bluebird2000",
+  "author": "https://github.com/Bluebird2000/typo-checker",
   "license": "MIT",
   "dependencies": {
     "@typescript-eslint/typescript-estree": "^8.33.1",
