chore(package): enhance keyword list for better npm and GitHub discoverability

--- a/package.json
+++ b/package.json
@@ -34,10 +34,25 @@
   "homepage": "https://github.com/Bluebird2000/typo-checker#readme",
   "keywords": [
     "typo",
-    "checker",
+    "typo-checker",
     "spellcheck",
-    "lint",
-    "variable"
+    "spellchecker",
+    "typo detection",
+    "misspelling",
+    "variable typos",
+    "string typo",
+    "string spellcheck",
+    "variable name linter",
+    "code quality",
+    "static analysis",
+    "code scanner",
+    "typescript linter",
+    "javascript linter",
+    "code hygiene",
+    "naming convention",
+    "codebase audit",
+    "lint tool",
+    "developer tool"
   ],
   "author": "https://github.com/Bluebird2000/typo-checker",
   "license": "MIT",
