--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "type": "module",
   "source": "bin/index.ts",
   "bin": {
-    "typo-checker": "dist/index.cjs.js"
+    "typo-checker": "dist/bin/index.js"
   },
   "files": [
     "dist",
