--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "typo-checker",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "Check for typos in variable names and string literals in a JavaScript/TypeScript codebase.",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
@@ -11,11 +11,11 @@
     "typo-checker": "dist/bin/index.js"
   },
   "files": [
-    "dist",
-    "dictionary.txt"
+    "dist"
   ],
   "scripts": {
-    "build": "tsup bin/index.ts --format esm,cjs --dts --out-dir dist",
+    "devbuild": "tsup bin/index.ts --format esm,cjs --dts --out-dir dist",
+    "build": "tsup lib/**/*.ts bin/**/*.ts --format esm,cjs --dts --out-dir dist --keep-directory-structure",
     "prepublishOnly": "npm run build",
     "typo-checker": "node dist/index.js"
   },
@@ -66,7 +66,7 @@
   },
   "devDependencies": {
     "@types/node": "^22.15.29",
-    "@types/react": "^19.1.4",
+    "@types/nspell": "^2.1.6",
     "tsup": "^8.4.0",
     "typescript": "^4.0.0"
   }
