--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   ],
   "scripts": {
     "devbuild": "tsup bin/index.ts --format esm,cjs --dts --out-dir dist",
-    "build": "tsup lib/**/*.ts bin/**/*.ts --format esm,cjs --dts --out-dir dist --keep-directory-structure",
+    "build": "tsup lib/**/*.ts bin/**/*.ts --format esm,cjs --dts --out-dir dist",
     "prepublishOnly": "npm run build",
     "typo-checker": "node dist/index.js"
   },
