--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "typo-checker",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "Check for typos in variable names and string literals in a JavaScript/TypeScript codebase.",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
@@ -62,6 +62,7 @@
     "cli-table3": "^0.6.5",
     "dictionary-en": "^4.0.0",
     "fast-glob": "^3.2.12",
+    "natural": "^8.1.0",
     "nspell": "^2.1.5"
   },
   "devDependencies": {
