--- a/package.json
+++ b/package.json
@@ -62,10 +62,12 @@
     "cli-table3": "^0.6.5",
     "dictionary-en": "^4.0.0",
     "fast-glob": "^3.2.12",
+    "natural": "^6.10.4",
     "nspell": "^2.1.5"
   },
   "devDependencies": {
     "@types/node": "^22.15.29",
+    "@types/natural": "^5.1.5",
     "@types/nspell": "^2.1.6",
     "tsup": "^8.4.0",
     "typescript": "^4.0.0"
